*** 3.2.2 / 2007-08-23
+ 1 major enhancement:
  + Profiling by RubyProf if CONFIG.profile.
+ 1 minor enhancement:
  + Added new task meteor_strike:update for updating plugin.
+ 2 minor spec changes:
  + Added lib/version.rb.
  + Added :without_logging to shooting_star.yml
+ 1 minor bugfix:
  + Renamed helper module of a chat generator template.

*** 3.2.1 / 2007-08-09
+ 2 critical bugfixes:
  + Fixed a behaviour of xhr client initialization.
  + Fixed a behaviour of flash client initialization.

*** 3.2.0 / 2007-08-09
+ 3 major enhancements:
  + Automatic activation/deactivation of flash client.
  + Ported meteor_strike.swf from CS3 to mtasc.
  + Heart beat.
  - Serialized event execution.
+ 7 minor enhancements:
  + shooting_star.yml is processed by ERB.
  + Updated implementation of observers.
  + Updated chat generator with connection notification.
  + Added sample chat observer script (see script/chat_observer).
  + Separated views of xhr and flash html into views/.
  + Added an event which will fire when connection is established.
  + Added debugging mode to meteor_strike.
+ 6 minor spec changes:
  + Changed default pid file location from log/ to tmp/pids/.
  + options[:connected] obsoleted. Please use options[:event] instead.
  + Became independent from alias_method_chain in order to support applications
    which use older versions (<1.2) of ruby on rails.
  + Added :debug option to meteor_strike helper.
  + Added :heartbeart option to meteor_strike helper.
  + Added :noflash option to meteor_strike helper.

*** 3.1.0 / 2007-07-18
+ 1 major enhancement:
  + Added 2 meteor_strike functions 'tuneInOut' and 'tuneOutIn'.

+ 1 minor enhancement:
  + FileUtil is used instead of `shell command`.

+ 1 critical bugfix:
  + Fixed broken `shooting_star init'.

+ 3 minor bugfixes:
  + Corrected initialization order of meteor_strike DOM elements.
  + Managed uncertainty situation of JS/Flash initialization.
  + Applied a patch from Koizuka.

*** 3.0.0 / 2007-06-22