@@ -27,8 +27,8 @@ expire.url               = ( "/favicon.ico"  => "access 3 days",
 # Change *-procs to 2 if you need to use Upload Progress or other tasks that
 # *need* to execute a second request while the first is still pending.
 fastcgi.server      = ( ".fcgi" => ( "localhost" => (
-  "min-procs"       => 1, 
-  "max-procs"       => 1,
+  "min-procs"       => 2, 
+  "max-procs"       => 2,
   "socket"          => CWD + "/tmp/sockets/fcgi.socket",
   "bin-path"        => CWD + "/public/dispatch.fcgi",
   "bin-environment" => ( "RAILS_ENV" => "development" )
