@@ -46,7 +46,7 @@
       ms.execute = function(js){eval(js)};
       ms.event = function(params){
         if(params.event == 'init'){
-          if(ms.connection) return Element.remove('#{iframe_id}');
+          if(ms.connection) return;
           ms.connection = params.type;
         }
         (function(){#{options[:event]}})();
@@ -72,25 +72,30 @@
         var tags = Array.prototype.without.apply(TAGS, tagsOut);
         ms.update(UID, tags.concat(tagsIn || []).uniq());
       };
-      Event.observe(window, 'load', function(){
-        setTimeout(ms.connector = function(){ 
-          if(ms.connection) return;
-          var form = $("#{iframe_id}-form");
-          form.uid.value = #{uid.to_json};
-          form.tag.value = #{tag.to_json};
-          form.sig.value = #{sig.to_json};
-          var timerId = setTimeout(ms.connector, 3000);
-          $('#{iframe_id}').onload = function(){clearTimeout(timerId)};
-          form.submit();
-        }, meteorStrike.getFlashVersion() >= 6 ? 3000 : 0);
-      });
+      setTimeout(ms.connector = function(){
+        if(ms.connection) return;
+        var form = $("#{iframe_id}-form");
+        form.uid.value = #{uid.to_json};
+        form.tag.value = #{tag.to_json};
+        form.sig.value = #{sig.to_json};
+        var timerId = setTimeout(ms.connector, 3000);
+        $('#{iframe_id}').onload = function(){clearTimeout(timerId)};
+        form.submit();
+      }, meteorStrike.getFlashVersion() >= 6 ? 3000 : 0);
     })();
     function meteor_strike_#{@meteor_strike}_DoFSCommand(command, args){
       var ms = meteorStrike[#{channel.to_json}];
       switch(command){
       case 'execute': ms.execute(args); break;
       case 'event':
-        if(args == 'connect') ms.event({event: 'init', type: 'flash'});
+        switch(args){
+        case 'connect':
+          if(ms.connection == 'xhr'){
+            Element.remove('#{iframe_id}');
+            ms.connection = null;
+          }
+          break;
+        }
         break;
       }
     }
